--- a/CSS/style.css
+++ b/CSS/style.css
@@ -5,23 +5,23 @@ body {
     font-family: sans-serif;
 }
 
-#phocontainer {
+#column {
     width: 960px;
-    display: block;
+    display: inline-block;
     text-align: center;
     margin: 1rem auto;
 }
 
 .container {
     text-align: center;
+    vertical-align: top;
     width: 28%;
     display: inline-block;
     padding: 0px;
 }
 
 h1 {
-    width: 700px:
-    font-size: 4em;
+    font-size: 3em;
     color:white;
     text-align: center;
     background-color: pink;
