--- a/CSS/style.css
+++ b/CSS/style.css
@@ -15,7 +15,7 @@ body {
 .container {
     text-align: center;
     vertical-align: top;
-    width: 28%;
+    width: 33%;
     display: inline-block;
     padding: 0px;
 }
@@ -30,6 +30,20 @@ h1 {
 
 H2 {
     color: pink;
-    font-size: 2em;
+    font-size: 200%;
     text-align: center;
+}
+
+.container p {
+    width: 50%;
+    font-size: 150%;
+    text-align: center;
+    margin: auto;
+    color: darkgray;
+
+}
+
+.container > img {
+    width: 80%;
+    height: auto;
 }
